# llvm-obfuscator

./: .gitignore  CHANGES.md  CMakeLists.txt  COMPILE_IR_TO_EXE.md  GITHUB_AUTH_FIX.md  GITHUB_SETUP.md  LICENSE  OBFUSCATOR_IMPROVEMENTS.md  PATH_FIXES_SUMMARY.md  QUICK_START.md  README.md  README_DEPLOYMENT.md  SETUP_COMPLETE.md  TEST_RESULTS.md  WEBAPP_TEST_RESULTS.md  WEBAPP_UPDATE_SUMMARY.md  WORKFLOW_EXPLANATION.md  build.bat  docker-compose.yml  obfuscation_report.txt  start-dev.bat  start-dev.sh  style.css  test_root.ll  verify-setup.js
backend/: .gitignore  Dockerfile  INSTALL_CLANG.md  package-lock.json  package.json
backend/src/: job-manager.js  obfuscation-service.js  report-parser.js  server.js
cmake/: LLVMObfuscatorConfig.cmake.in
deployment/: BILLING_SETUP.md  DEPLOYMENT_GUIDE.md  Dockerfile.backend  Dockerfile.frontend  FREE_DEPLOYMENT_GUIDE.md  FRONTEND_DEPLOYMENT.md  HOW_TO_GET_BACKEND_URL.md  PROJECT_INFO.md  QUICK_DEPLOY.md  QUICK_FREE_DEPLOY.md  RENDER_SETUP_CHECKLIST.md  build-obfuscator.sh  cloudbuild.yaml  cloudrun.yaml  deploy.ps1  deploy.sh  gcp-setup.md  render.yaml  setup-gcp-project.ps1
docs/: TECHNICAL_GUIDE.md
examples/: CMakeLists.txt  advanced_example.cpp  build_examples.bat  obfuscation_report.txt  simple_example.c  simple_example.ll  simple_example_obfuscated.ll  test_fixed_report.txt  test_new_features.ll
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/contact/: page.tsx
frontend/app/presets/: page.tsx
frontend/app/privacy/: page.tsx
frontend/app/results/[jobId]/: page.tsx
frontend/app/terms/: page.tsx
frontend/components/: AnimatedCounter.tsx  CodeViewer.tsx  ComparisonView.tsx  CompilationInstructions.tsx  FileUpload.tsx  GradientBackground.tsx  LoadingSkeleton.tsx  Logo.tsx  ObfuscationConfig.tsx  ObfuscationReport.tsx  Popover.tsx  ProgressRing.tsx  Results.tsx  ScrollReveal.tsx  SecurityMeter.tsx  StatCard.tsx  ThemeProvider.tsx  Toast.tsx  Tooltip.tsx
frontend/design/: virustotal-light-mode-analysis.md  virustotal-reference.md
frontend/styles/: virustotal-theme.css
gui/: README.md  build.bat
gui/LLVMObfuscator/: App.axaml  App.axaml.cs  LLVMObfuscatorAvalonia.csproj  Program.cs  README.md  app.manifest  build-debug.bat  build-production.bat  obfuscated_output.ll  obfuscation_report.txt  test_program.ll
gui/LLVMObfuscator/Models/: AppSettings.cs
gui/LLVMObfuscator/Services/: ConfigurationService.cs  DialogService.cs  IConfigurationService.cs  IDialogService.cs  INotificationService.cs  NotificationService.cs  ObfuscationService.cs
gui/LLVMObfuscator/Validators/: ObfuscationOptionsValidator.cs
gui/LLVMObfuscator/ViewModels/: ConfigurationViewModel.cs  FileSelectionViewModel.cs  MainWindowViewModel.cs  ResultsViewModel.cs  ViewModelBase.cs
gui/LLVMObfuscator/Views/: ConfigurationView.axaml  ConfigurationView.axaml.cs  FileSelectionView.axaml  FileSelectionView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  MainWindow_temp.py  ResultsView.axaml  ResultsView.axaml.cs
include/: ObfuscationPass.h
src/: CMakeLists.txt  ObfuscationPass.cpp
tests/: CMakeLists.txt  README.md  cli-runner.js  comparison.js  config.js  package-lock.json  package.json  run-tests.js  webapp-runner.js
tests/pipeline/: test-exception-handling.js  test-full-pipeline.js
tests/presets/: test-basic-preset.js  test-heavy-preset.js  test-medium-preset.js
tests/techniques/: test-anti-analysis.js  test-anti-debug.js  test-anti-tamper.js  test-bogus-code.js  test-constant-obf.js  test-control-flow.js  test-dynamic.js  test-fake-loops.js  test-flattening.js  test-indirect-calls.js  test-instruction-sub.js  test-mba.js  test-metamorphic.js  test-polymorphic.js  test-string-encryption.js  test-virtualization.js
tests/utils/: file-utils.js  ir-parser.js  report-parser.js
tools/: CMakeLists.txt  decompile_analysis.py  ir_to_c.py  llvm-obfuscator.cpp
